
Changelog
=========

2018.5.0 (unreleased)
---------------------

- Fix tree portlet header styling for IE11. [Kevin Bieri]
- Correct info messages in meetings. [njohner]
- Fix global scoped "show more" links for SOLR livesearch [Rotonen]
- Only set proposal to decided when excerpt has been generated and returned. [njohner]
- Add actions pointing to the meeting and protocol debug views. [njohner]
- Fix bug with document without file in a dossiertemplate. [njohner]
- Prevent replacing files on proposal templates with non-.docx files via quickupload. [Rotonen]
- Correct width of subdossier table in dossier details pdf. [njohner]
- Do not set document date during check-in or cancel. [njohner]
- Disallow grouping tasks by the checkbox column in list views. [Rotonen]
- Add feature to generate a task listing pdf when resolving a dossier. [njohner]
- Set adhoc agendaitem filename to title without prefixing it. [njohner]
- Disallow dossier from template when adding businesscasedossier is disallowed. [njohner]
- Change wording for "Return Excerpt" from "zurücksenden" to "ablegen". [njohner]
- Add modification and creation date column to document listings. [njohner]
- Disallow replacing the file on proposal documents with a non-.docx file. [Rotonen]
- Disallow removing the file from proposal documents. [Rotonen]
- Bump lxml to 4.1.1. [Rotonen]


2018.4.3 (2018-09-04)
---------------------

- Scale down size for logo wrapper, to have more space for personal menues. [phgross]
- Fix an encoding issue in an upgrade by no using model code. [deiferni]
- Fix double escaping of agendaitem title in meeting overview. [njohner]
- Fix handling of unidirectional by reference tasks in a sequential process. [phgross]


2018.4.2 (2018-08-30)
---------------------

- Make upgrade step 20180619143343 deferrable: Use of CMFEditions getHistory causes massive amounts of savepoints. [lgraf]
- Simplify agenda item titles for folder names for meeting zip exports. [Rotonen]