@@ -6,6 +6,7 @@ Changelog
 ---------------------
 
 - Fix tree portlet header styling for IE11. [Kevin Bieri]
+- Register bmp as editable by officeconnector. [phgross]
 - Correct info messages in meetings. [njohner]
 - Fix global scoped "show more" links for SOLR livesearch [Rotonen]
 - Only set proposal to decided when excerpt has been generated and returned. [njohner]
